# WebDev-Projects

./: README.txt  admin_dashboard.html  check_credentials.html  dashboard.py  get_student.html  grid.py  pg2.html  pg2reg.html  pg3form.html  proj1.py  proj2.py  proj3.py  proj4.py  pyproject.toml  student_list.html
templates/: check_credentials.html  create_password.html  display_studentt.html  notepadex1.html  pg3.html  setpass.html  styles.css  success_registration.html
